# Manga-Metrics-Visualizing-Anime-Data

./: .gitignore  README.md  anime.ipynb  pyproject.toml  requirements.txt  statistical_hypothesis.ipynb
eda/: analysis_anime.ipynb  clean_data.ipynb  statistical_hypothesis.ipynb
eda/.ipynb_checkpoints/: clean_data-checkpoint.ipynb
